# relocator

./: .gitignore  Pipfile  README.md  block.py  config.txt  dhcp.py  pyproject.toml  serve.py  test.py
