[tool.poetry]
name = "relocator"
version = "0.1.0"
description = ""
authors = ["mcutshaw <jack@jackofnotrades.org>"]

[tool.poetry.dependencies]
python = "^3.7"
ipaddress = "*"
datetime = "*"
netifaces = "^0.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
